// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Svg renders a menu icon with $float property 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #2e2e2e;
  color: #2e2e2e;
  float: left;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="1 2 3 4"
  />
</DocumentFragment>
`;

exports[`Svg renders a menu icon with no size 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #FFFFFF;
  color: #FFFFFF;
  display: inline-block;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="1 2 3 4"
  />
</DocumentFragment>
`;

exports[`Svg renders a menu icon with specified size and color 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #FFFFFF;
  color: #FFFFFF;
  width: 16px;
  height: 16px;
  display: inline-block;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="1 2 3 4"
  />
</DocumentFragment>
`;

exports[`Svg renders a menu icon with specified size and default color 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #2e2e2e;
  color: #2e2e2e;
  width: 64px;
  height: 64px;
  display: inline-block;
}

<svg
    aria-labelledby="mock-bui-1"
    class="emotion-0"
    viewBox="1 2 3 4"
  />
</DocumentFragment>
`;
